--- a/azure-pipelines/azure-pipeline.yml
+++ b/azure-pipelines/azure-pipeline.yml
@@ -55,8 +55,10 @@ extends:
             python -m pytest tests
           displayName: Run Tests
 
-        - task: TSAUpload@2
-          inputs:
-            GdnPublishTsaOnboard: true
-            GdnPublishTsaConfigFile: '$(Build.SourcesDirectory)/.config/TSAOptions.json'
-          displayName: 'TSA upload to Codebase (vscode-deviceid)'
+        # Because there is no build and no build scanning is enabled, there are no TSA files to upload.
+        # Commenting this out for now.
+        # - task: TSAUpload@2
+        #   inputs:
+        #     GdnPublishTsaOnboard: true
+        #     GdnPublishTsaConfigFile: '$(Build.SourcesDirectory)/.config/TSAOptions.json'
+        #   displayName: 'TSA upload to Codebase (py-deviceid)'
