--- a/azure-pipelines/azure-pipeline.yml
+++ b/azure-pipelines/azure-pipeline.yml
@@ -21,13 +21,13 @@ resources:
   - repository: MicrobuildTemplate
     type: git
     name: 1ESPipelineTemplates/MicroBuildTemplate
-    ref: refs/heads/release
+    ref: refs/tags/release
 
 extends:
   # The pipeline extends the 1ES PT which will inject different SDL and compliance tasks.
   # For non-production pipelines, use "Unofficial" as defined below.
   # For productions pipelines, use "Official".
-  template: /azure-pipelines/MicroBuild.1ES.Official.Publish.yml@MicroBuildTemplate
+  template: azure-pipelines/MicroBuild.1ES.Official.yml@MicroBuildTemplate
   parameters:
     customBuildTags:
     - Ignore-Tag
@@ -39,7 +39,7 @@ extends:
     - stage: BuildAndTest
       jobs:
       - job: BuildAndTest
-        displayName: BuildAndTest
+        displayName: Build And Test
 
         steps:
         - task: UsePythonVersion@0
@@ -60,21 +60,15 @@ extends:
             python -m pytest tests
           displayName: Run Tests
 
-        - ${{ if parameters.Publish }}:
-          - template: /azure-pipelines/MicroBuild.Publish.yml@MicroBuildTemplate
-            parameters: 
-              intent: 'PackageDistribution'
-              contentType: 'PyPi'
-              contentSource: 'Folder'
-              folderLocation: '$(Build.ArtifactStagingDirectory)\dist'
-              waitForReleaseCompletion: true
-              owners: 'piel@microsoft.com'
-              approvers: 'rdawson@microsoft.com'
-
         - task: 1ES.PublishPipelineArtifact@1
           inputs:
             targetPath: '$(Build.ArtifactStagingDirectory)'
-            artifactName: output
+            artifactName: drop
+
+        - ${{ if parameters.Publish }}:
+          - script: |
+              echo ##vso[build.addbuildtag]auto-release
+            displayName: 'Apply auto-release tag'
 
         # Because there is no build and no build scanning is enabled, there are no TSA files to upload.
         # Commenting this out for now.
